dtext: fix empty space beneath dtext blocks.
Remove the empty space beneath DText blocks caused by the bottom margin on the last paragraph. Fixes
comments and artist commentaries having unwanted extra space at the bottom. Requires adding extra
margins in some other places to make up for this lost margin.

--- a/app/javascript/src/styles/common/dtext.scss
+++ b/app/javascript/src/styles/common/dtext.scss
@@ -2,6 +2,10 @@ div.prose {
   line-height: 1.4em;
   word-break: break-word;
 
+  > *:last-child {
+    margin-bottom: 0;
+  }
+
   p {
     margin-bottom: 0.75rem;
   }
@@ -139,11 +143,6 @@ div.prose {
       margin-bottom: 1em;
     }
   }
-}
-
-// avoid empty gaps beneath dtext blocks in table rows.
-table td div.prose > *:last-child {
-  margin-bottom: 0;
 }
 
 div.dtext-preview {
