--- a/app/javascript/src/styles/common/utilities.scss
+++ b/app/javascript/src/styles/common/utilities.scss
@@ -113,6 +113,9 @@ $spacer: 0.25rem; /* 4px */
 .mx-2    { margin-left: 2   * $spacer; margin-right: 2   * $spacer; }
 .mx-4    { margin-left: 4   * $spacer; margin-right: 4   * $spacer; }
 
+.my-2    { margin-top: 2   * $spacer; margin-bottom: 2   * $spacer; }
+.my-4    { margin-top: 4   * $spacer; margin-bottom: 4   * $spacer; }
+
 .mt-1  { margin-top: 1 * $spacer; }
 .mt-2  { margin-top: 2 * $spacer; }
 .mt-4  { margin-top: 4 * $spacer; }
